# pynotex

./: COMPLETION_REPORT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  env.example  main.py  pyproject.toml  test_server.py
app/: __init__.py  agent.py  config.py  gemini.py  prompt.py  server.py  store.py  store.py.broken  types.py  vector.py
frontend/: index.html
